@@ -65,10 +65,6 @@
           url_expr="string:${object_url}/edit" visible="True">
     <permission value="Modify portal content"/>
   </action>
-  <action title="document_with_docucomposer"  i18n:domain="opengever.dossier" action_id="document_with_docucomposer" category="folder_factories" condition_expr=""
-          url_expr="string:${object_url}/docucomposer-wizard" visible="True">
-    <permission value="Add portal content"/>
-  </action>
 
   <!-- Tabbedview tabs-->
   <action title="Overview" action_id="overview" category="tabbedview-tabs"
